# PyAI

./: LAST_MODIF.md  LICENSE  PyAI.code-workspace  README.md
AI_Studio/: GEMINI.md  Pipfile  chat_main.py  chat_util_functions.py  output_results.md
AI_Studio/tests/: test_chat_main.py  test_chat_util_functions.py
DeepSeekAI/: GEMINI.md  Pipfile  README.md  chat_main.py  input_prompt.md  output_results.md  pyproject.toml
DeepSeekAI/src/: chat_main.py
DeepSeekAI/src/deepseek_chat_app/: __init__.py  __main__.py  chat_main.py  chat_util_functions.py
DeepSeekAI/tests/: test_chat_main.py  test_chat_util_functions.py
GeminiAI/: GEMINI.md  README.md  input_prompt.md  output_results.md  pyproject.toml
GeminiAI/.gemini/commands/: roadmap.toml
GeminiAI/src/gemini_chat_app/: __init__.py  __main__.py  chat_main.py  chat_util_functions.py
GeminiAI/tests/: test_chat_main.py  test_chat_util_functions.py
MistralAI/: GEMINI.md  Pipfile  README.md  chat_main.py  input_prompt.md  output_results.md  pyproject.toml  test_chat_main_demo_gemini.py
MistralAI/.codex/: suggestions.md
MistralAI/src/: chat_main.py
MistralAI/src/mistral_chat_app/: __init__.py  __main__.py  chat_main.py  chat_util_functions.py
MistralAI/tests/: test_chat_main.py  test_chat_util_functions.py
